<resources>
    <string name="app_name">Zivug</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_contact">Add Contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_details">Personal Details</string>
    <string name="overview">Overview</string>
    <string name="previous_dates">Previous Dates</string>
    <string name="notes">Notes</string>
    <string name="add_name">Name *</string>
    <string name="add_notes">Notes</string>
    <string name="add_profile_picture">Profile Picture</string>
    <string name="select_male">Male</string>
    <string name="select_female">Female</string>
    <string name="no_previous_dates_listed">No Previous Dates Listed.</string>
    <string name="no_contact_details_listed">No Contact Details Listed.</string>
    <string name="nothing_to_show">Nothing to show.</string>
    <string name="no_notes_listed">No Notes Listed.</string>
    <string name="personal_notes">Write here your personal notes on this person.</string>
    <string name="add_age">Age</string>
    <string name="add_location">Add Location</string>
    <string name="no_name_inserted">No name inserted</string>
    <string name="no_gender_selected">Please select a gender.</string>
    <string name="add_tags">Add Tags</string>
    <string name="error">There was an error.</string>
    <string name="app_logo_name">Zivug</string>
    <string name="delete">Delete Contact</string>
    <string name="undo_delete_contact">Undo</string>
    <string name="contact_deleted">Contact has been deleted</string>
    <string name="are_you_sure">Are you sure you want to delete the contact?</string>
    <string name="search_menu">Search</string>
    <string name="clear_search">Clear</string>
    <string name="add_from_contacts">Add From Contacts</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="no_data_to_show">Nothing to show.</string>
    <string name="add_tag">Add Tag</string>
    <string name="cancel">Cancel</string>
    <string name="update_tag">Update</string>
    <string name="login">Login</string>
    <string name="update_location">Update Location</string>
</resources>
